--- a/Text_Draw.css
+++ b/Text_Draw.css
@@ -1,7 +1,9 @@
 @font-face {
   font-family: "FontOne"; /* ตั้งชื่อฟอนต์ตามที่ต้องการ ถ้า FONT_ONE ไม่ทำงาน sans-serif จะทำแทน */
-  src: url("./BBHSansBartle-Regular.ttf") format("truetype");
-
+  /* src: url("./BBHSansBartle-Regular.ttf") format("truetype"); */
+  font-family: "BBH Sans Bartle", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 h1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -61,3 +63,4 @@ h1 {
     font-family: "FontOne", sans-serif;
 
 }
+
