--- a/Text_Draw.css
+++ b/Text_Draw.css
@@ -6,7 +6,7 @@
 /* </style> */
 /* } */
 body {
-    font-family: 'FontOne', sans-serif;
+    font-family: 'BBH Sans Bartle', sans-serif;
 }
 h1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -41,7 +41,7 @@ h1 {
     font-size: 8px;
     margin-left: 20px;
     margin-top: 6px;
-    font-family: "FontOne", sans-serif;
+    font-family: 'BBH Sans Bartle', sans-serif;
 }
 #job00 {
     width: 30px;
@@ -63,9 +63,10 @@ h1 {
     font-size: 12px;
     margin-left:20px;
     margin-top: 6px;
-    font-family: "FontOne", sans-serif;
+    font-family: 'BBH Sans Bartle', sans-serif;
 
 }
+
 
 
 
