--- a/Text_Draw.css
+++ b/Text_Draw.css
@@ -1,9 +1,9 @@
 /* @font-face { */
   /* font-family: "FontOne"; /* ตั้งชื่อฟอนต์ตามที่ต้องการ ถ้า FONT_ONE ไม่ทำงาน sans-serif จะทำแทน */ */
   /* src: url("./BBHSansBartle-Regular.ttf") format("truetype"); */
-<style>
+/* <style> */
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap');
-</style>
+/* </style> */
 /* } */
 body {
     font-family: 'BBH Sans Bartle', sans-serif;
@@ -66,6 +66,7 @@ h1 {
     font-family: 'BBH Sans Bartle', sans-serif;
 
 }
+
 
 
 
