--- a/Text_Draw.css
+++ b/Text_Draw.css
@@ -5,9 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap');
 /* </style> */
 /* } */
-body {
-    font-family: 'BBH Sans Bartle', sans-serif;
-}
+/* body { */
+    /* font-family: 'BBH Sans Bartle', sans-serif; */
+/* } */
 h1 {
     font-family: 'BBH Sans Bartle';
     text-align: center;
@@ -66,6 +66,7 @@ h1 {
     font-family: 'BBH Sans Bartle', sans-serif;
 
 }
+
 
 
 
