--- a/Text_Draw.css
+++ b/Text_Draw.css
@@ -2,14 +2,15 @@
   /* font-family: "FontOne"; /* ตั้งชื่อฟอนต์ตามที่ต้องการ ถ้า FONT_ONE ไม่ทำงาน sans-serif จะทำแทน */ */
   /* src: url("./BBHSansBartle-Regular.ttf") format("truetype"); */
 /* <style> */
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap');
-/* </style> */
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=BBH+Sans+Bartle&family=Bungee&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Jersey+10&family=Jersey+20+Charted&family=Rubik+80s+Fade&display=swap" rel="stylesheet">
 /* } */
 /* body { */
     /* font-family: 'BBH Sans Bartle', sans-serif; */
 /* } */
 h1 {
-    font-family: 'Alfa Slab One';
+    font-family: 'BBH Sans Bartle';
     text-align: center;
     font-size: 50px;
     -webkit-text-stroke: 0.8px black;
@@ -66,6 +67,7 @@ h1 {
     font-family: 'BBH Sans Bartle', sans-serif;
 
 }
+
 
 
 
